feat: Enhance theme styles for improved readability and layout
- Updated CSS variables for enhanced neutrals and accent colors.
- Improved text styles for headers, paragraphs, and buttons to ensure maximum contrast and readability.
- Enhanced layout alignment for containers, headers, and navigation tabs.
- Removed unnecessary styles and added comments for clarity.

fix: Update HTML structure for better integration with new styles

- Removed inline styles from subtitle in index.html for consistency with CSS.
- Ensured proper linking of the enhanced theme stylesheet.

refactor: Streamline JavaScript for better performance and error handling

- Initialized DOM elements after the DOM is fully loaded.
- Improved error handling in API requests with clearer messages.
- Added timeout for API requests to prevent hanging.
- Consolidated logging for better readability and removed unnecessary logs.

test: Add simple test script for quick validation of functionality

- Created a test script to check the presence of forms and backend connectivity.
- Included instructions for running the backend server.

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,11 +1,12 @@
 # Main requirements file for the Trend Compass backend
+# Updated for Python 3.13 compatibility
 # These packages are necessary for running the FastAPI application
 # and integrating with Gemini and Qloo APIs
 
-fastapi==0.110.0        # Modern, fast web framework for building APIs
-uvicorn==0.27.0         # ASGI server implementation for running FastAPI
-python-dotenv==1.0.1    # Loading environment variables from .env file
-httpx==0.27.0           # Fully featured HTTP client
-pydantic==2.6.0         # Data validation and settings management
-google-generativeai==0.3.0  # Google's Gemini API client
-python-multipart==0.0.9  # For handling form data and file uploads
+fastapi>=0.110.0        # Modern, fast web framework for building APIs
+uvicorn>=0.27.0         # ASGI server implementation for running FastAPI
+python-dotenv>=1.0.1    # Loading environment variables from .env file
+httpx>=0.27.0           # Fully featured HTTP client
+pydantic>=2.9.0         # Data validation and settings management (Python 3.13 compatible)
+google-generativeai>=0.8.0  # Google's Gemini API client (latest version)
+python-multipart>=0.0.9  # For handling form data and file uploads
