--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,9 @@ GEMINI_API_KEY=your_gemini_api_key_here
 # Qloo API Key (Cultural affinity data)
 QLOO_API_KEY=your_qloo_api_key_here
 
+# Qloo API URL
+QLOO_API_URL=
+
 # FastAPI configuration
 PORT=8000
 HOST=0.0.0.0
