--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,8 @@
 # and integrating with Gemini and Qloo APIs
 
 fastapi>=0.110.0        # Modern, fast web framework for building APIs
-uvicorn>=0.27.0         # ASGI server implementation for running FastAPI
+uvicorn[standard]>=0.27.0         # ASGI server implementation for running FastAPI
+gunicorn>=21.2.0        # WSGI HTTP Server for production deployment
 python-dotenv>=1.0.1    # Loading environment variables from .env file
 httpx>=0.27.0           # Fully featured HTTP client
 pydantic>=2.9.0         # Data validation and settings management (Python 3.13 compatible)
