--- a/render.yaml
+++ b/render.yaml
@@ -2,10 +2,9 @@ services:
   - type: web
     name: trend-compass-api
     runtime: python
-    region: oregon
     plan: free
     buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn -w 4 -k uvicorn.workers.UvicornWorker --chdir backend main:app --bind 0.0.0.0:$PORT
+    startCommand: python wsgi_runner.py
     envVars:
       - key: PYTHON_VERSION
         value: 3.11
