--- a/render.yaml
+++ b/render.yaml
@@ -1,4 +1,5 @@
 services:
+  # Backend API
   - type: web
     name: trend-compass-api
     runtime: python
@@ -8,3 +9,17 @@ services:
     envVars:
       - key: PYTHON_VERSION
         value: 3.11
+
+  # Frontend Static Site
+  - type: web
+    name: trend-compass-frontend
+    runtime: static
+    buildCommand: npm ci && npm run build
+    staticPublishPath: ./dist
+    routes:
+      - type: rewrite
+        source: /*
+        destination: /index.html
+    envVars:
+      - key: NODE_VERSION
+        value: 18
